# todo-evolution

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  README.md  performance-results.txt  pyproject.toml  todo.py
.claude/: SKILLS_AND_AGENTS_GUIDE.md
.claude/agents/: phase-implementer.md  security-auditor.md  test-guardian.md
.claude/commands/: sp.implement.md  sp.plan.md  sp.specify.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  ALEMBIC_SETUP.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_AND_TESTING_NOTES.md  README.md  STEP1_PROGRESS.md  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/src/: __init__.py  main.py
backend/tests/: __init__.py  conftest.py
docs/: PHASE-II-FEATURE-CHECKLIST.md  PHASE-II-SETUP.md  PHASE-II-STATUS.md
frontend/: README.md  STEP3_COMPLETE.md  package-lock.json  package.json
frontend/app/: page.tsx
frontend/lib/: api-client.ts  auth-client.ts  auth.ts
history/adr/: 0001-future-proof-data-architecture-with-phase-v-fields.md  0002-phase-i-technology-stack.md  0003-user-isolation-architecture-with-service-layer.md  0004-database-choice-sqlite-for-phase-i-console.md
specs/001-add-task/: acceptance-checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-evolution-vision/: mcp-usage-guide.md  spec.md
specs/002-phase-i-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/003-phase-ii-web-app/: data-model.md  plan.md  research.md  (+1 more)
src/: __init__.py  interactive.py  main.py
tests/: __init__.py  conftest.py
(+92 files in other folders)
